fixtures/fennel/negative/runaway-macro.fnl
(macro forever []
  (while true))

(forever)
